index.html: index.sgml
	linuxdoc --backend=html index.sgml
index-1.html: index.sgml
	linuxdoc --backend=html index.sgml
index-2.html: index.sgml
	linuxdoc --backend=html index.sgml
index-3.html: index.sgml
	linuxdoc --backend=html index.sgml
index-4.html: index.sgml
	linuxdoc --backend=html index.sgml
index-5.html: index.sgml
	linuxdoc --backend=html index.sgml

index.txt: index.sgml
	linuxdoc --backend=txt index.sgml


data_DATA = index.html index-1.html index-2.html index-3.html index-4.html index-5.html index.sgml index.txt
dist_data_DATA = index.sgml.in
